--- a/css/style.css
+++ b/css/style.css
@@ -558,7 +558,7 @@
   #intro-2 {
     width: 100%;
     height: 90vh;
-    background: url(../img/carrosel/foto-carrosel3.jpg) top center;
+    background: url(../img/foto_pet.jpg) top center;
     background-size: cover;
     overflow: hidden;
     position: relative;
@@ -714,7 +714,7 @@
   #intro {
     width: 100%;
     height: 90vh;
-    background: url(../img/carrosel/foto-carrosel2.jpg) top center;
+    background: url(../img/foto_pet.jpg) top center;
     background-size: cover;
     overflow: hidden;
     position: relative;
