--- a/css/style.css
+++ b/css/style.css
@@ -558,7 +558,7 @@
   #intro-2 {
     width: 100%;
     height: 90vh;
-    background: url(../img/foto_pet.jpg) top center;
+    background: url(../img/fundo-1.png) top center;
     background-size: cover;
     overflow: hidden;
     position: relative;
@@ -714,7 +714,7 @@
   #intro {
     width: 100%;
     height: 90vh;
-    background: url(../img/foto_pet.jpg) top center;
+    background: url(../img/fundo-1.png) top center;
     background-size: cover;
     overflow: hidden;
     position: relative;
@@ -1269,7 +1269,7 @@
   
   #subscribe {
     padding: 60px;
-    background: url(../img/subscribe-bg.jpg) center center no-repeat;
+    background: url(../img/fundo-1.png) center center no-repeat;
     background-size: cover;
     overflow: hidden;
     position: relative;
@@ -1793,7 +1793,7 @@
     }
   
     #intro {
-      background-image: url(../img/carrosel/foto-carrosel1.JPEG);
+      background-image: url(../img/fundo-1.png);
     }
   
     #intro h1 {
