--- a/css/style.css
+++ b/css/style.css
@@ -1817,7 +1817,7 @@
     }
   
     #intro {
-      background-image: url(../img/fundo-1.png);
+      background-image: url(../img/fundo-1-mobile.png);
     }
   
     #intro h1 {
@@ -1881,6 +1881,10 @@
     #contact .contact-phone {
       border-left: 1px solid #ddd;
       border-right: 1px solid #ddd;
+    }
+    #about-2 {
+      flex-direction: column;
+      align-items: center;
     }
   
   }
