--- a/css/registros.css
+++ b/css/registros.css
@@ -1,18 +1,18 @@
-img{
+img {
     max-width: 100%;
     margin-bottom: 10px;
 }
-.imagens-group{
-    column-count: 2;
-    column-gap: 10px;
-}
-.teste{
+
+.imagens-group {
     display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
-@media (max-width:800px){
-    .imagens-group{
-        column-count: 2;
-        column-gap: 10px;
-    }
+.imagens-wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 15px; 
+    flex-wrap: wrap; 
+    padding: 20px;
 }
