--- a/css/registros.css
+++ b/css/registros.css
@@ -7,12 +7,25 @@ img {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 100%;
+    max-width: 300px;
 }
 
+#img-especifica{
+    width: 100%;
+    max-width: 212px;   
+}
 .imagens-wrapper {
     display: flex;
     justify-content: center;
-    gap: 15px; 
-    flex-wrap: wrap; 
+    gap: 15px;
     padding: 20px;
+    flex-wrap: wrap;
+}
+
+@media (max-width: 800px) {
+    .imagens-group {
+        flex: 1 1 calc(50% - 30px);
+        max-width: none;
+    }
 }
