--- a/css/registros.css
+++ b/css/registros.css
@@ -1,6 +1,13 @@
 img {
     max-width: 100%;
     margin-bottom: 10px;
+    object-fit: cover;
+    transition: .2s linear;
+}
+
+
+img:hover{
+    transform: scale(0.95);
 }
 
 .imagens-group {
@@ -8,14 +15,50 @@ img {
     flex-direction: column;
     gap: 10px;
     width: 100%;
-    max-width: 300px;
+    max-width: 270px;
+    cursor: pointer;
+}
+
+.popup-image{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .9);
+    height: 100%;
+    width: 100%;
+    z-index: 1000;
+    display: none;
+}
+
+.popup-image span{
+    position: absolute;
+    top: 0;
+    right: 30px;
+    font-size: 40px;
+    font-weight: bolder;
+    color: white;
+    cursor: pointer;
+    z-index: 100;
+}
+
+.popup-image img{
+    position: absolute;
+    top: 50%;left: 50%;
+    transform: translate(-50%,-50%);
+    max-width: 80%;
+    max-height: 80%;
+    object-fit: cover;
+    padding-left: 25px;
+    padding-right: 25px;
+
 }
 
 #img-especifica{
     width: 100%;
-    max-width: 212px;   
+    max-width: 190px;   
 }
-.imagens-wrapper {
+
+.galery-images {
     display: flex;
     justify-content: center;
     gap: 15px;
@@ -23,9 +66,37 @@ img {
     flex-wrap: wrap;
 }
 
+
+
 @media (max-width: 800px) {
-    .imagens-group {
+    .galery-images {
         flex: 1 1 calc(50% - 30px);
         max-width: none;
+        gap: 3px;
+    }
+    .section-header {
+        margin-bottom: 10px;
+        padding-bottom: 4px;
+    }
+    .section-header h2 {
+        font-size: 30px;
+    }
+    .galery-images {
+        gap: 10px;
+    }
+}
+
+@media (max-width: 600px) {
+    .imagens-group {
+        max-width: 180px;
+    }
+    img {
+        margin-bottom: 0px;
+    }
+}
+
+@media (max-width: 400px) {
+    .imagens-group {
+        max-width: 162px;
     }
 }
